revert change getFirst